# chatbot-widget

./: .gitignore  .todos  pyproject.toml
dev/: chatbot.html
src/chatbot_widget/: __init__.py
src/chatbot_widget/controller/: chat_mcp_controller.py  openai_controller.py  openai_mcp_controller.py  test_controller.py
src/chatbot_widget/mcp/: random_server.py  server_manager.py
src/chatbot_widget/mcp/example_server/: ascii_server.py  random_server.py  teradatasql_server.py
src/chatbot_widget/ui/: chat_view.py
src/chatbot_widget/ui/components/: chat_bubble.py  input_bar.py  renderers.py  scroll_box.py
src/chatbot_widget/utils/: utils.py
