[project]
name = "chatbot-widget"
version = "0.1.0"
description = "A chatbot interface running entirely with ipywidgets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.12.5",
    "ipywidgets>=8.1.7",
    "langchain>=1.0.0",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "markdown>=3.9",
    "openai>=2.5.0", # ✅ modern OpenAI SDK
    "pyfiglet>=1.0.4",
    "teradatasql>=20.0.0.44",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black", "jupyterlab"]

[project.scripts]
chatbot-widget = "chatbot_widget:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyterlab>=4.4.9",
]
